--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://edelbertroosje.github.io/crwn-clothing/",
+  "homepage": "http://edelbertroosje.github.io/crwn-clothing",
   "name": "crwn-clothing",
   "version": "0.1.0",
   "private": true,
